--- a/package.json
+++ b/package.json
@@ -1,45 +1,49 @@
 {
-  "name": "create-react-game",
-  "version": "0.0.1",
-  "private": false,
-  "license": "MIT",
-  "author": {
-    "name": "Hendrik Mans",
-    "email": "hendrik@mans.de",
-    "url": "https://hmans.co"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/hmans/create-react-game.git"
-  },
-  "type": "module",
-  "bin": {
-    "create-react-game": "index.js",
-    "crg": "index.js"
-  },
-  "files": [
-    "template-*",
-    "index.js",
-    "README.md",
-    "LICENSE.md"
-  ],
-  "main": "index.js",
-  "engines": {
-    "node": "^14.18.0 || >=16.0.0"
-  },
-  "prettier": {
-    "trailingComma": "none",
-    "tabWidth": 2,
-    "useTabs": true,
-    "semi": false,
-    "singleQuote": false,
-    "arrowParens": "always",
-    "printWidth": 90
-  },
-  "dependencies": {
-    "fs-extra": "^10.1.0",
-    "kolorist": "^1.5.1",
-    "minimist": "^1.2.6",
-    "prompts": "^2.4.2"
-  }
+	"name": "create-react-game",
+	"version": "0.0.1",
+	"private": false,
+	"license": "MIT",
+	"author": {
+		"name": "Hendrik Mans",
+		"email": "hendrik@mans.de",
+		"url": "https://hmans.co"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/hmans/create-react-game.git"
+	},
+	"type": "module",
+	"bin": {
+		"create-react-game": "index.js",
+		"crg": "index.js"
+	},
+	"files": [
+		"template-*",
+		"index.js",
+		"README.md",
+		"LICENSE.md"
+	],
+	"main": "index.js",
+	"engines": {
+		"node": "^14.18.0 || >=16.0.0"
+	},
+	"scripts": {
+		"clean": "rimraf template-react-game/node_modules"
+	},
+	"prettier": {
+		"trailingComma": "none",
+		"tabWidth": 2,
+		"useTabs": true,
+		"semi": false,
+		"singleQuote": false,
+		"arrowParens": "always",
+		"printWidth": 90
+	},
+	"dependencies": {
+		"fs-extra": "^10.1.0",
+		"kolorist": "^1.5.1",
+		"minimist": "^1.2.6",
+		"prompts": "^2.4.2",
+		"rimraf": "^3.0.2"
+	}
 }
