--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"printWidth": 90
 	},
 	"dependencies": {
+		"degit": "^2.8.4",
 		"fs-extra": "^10.1.0",
 		"kolorist": "^1.5.1",
 		"minimist": "^1.2.6",
